--- a/style.css
+++ b/style.css
@@ -32,10 +32,9 @@
 	
     float: left; /* Обтекание справа */
     border: 1px solid #333; /* Параметры рамки вокруг */
-    width: 10%; /* Ширина колонки */
+     /* Ширина колонки */
     padding: 5px; /* Поля вокруг текста */
     margin: 10px 10px 20px 5px; /* Значения отступов */
-   
 	background: #5b5656;
    }
    #content { /* Правая колонка */
