--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	background: url(1.jpg);
 	background-repeat:no-repeat;/*неподвижный фон*/
 	background-attachment:fixed;
+
 	
    }
    h1 {
@@ -29,21 +30,28 @@
     padding: 10px; /* Поля вокруг текста */
    }
    #sidebar { /* Левая колонка */
-	
+
     float: left; /* Обтекание справа */
     border: 1px solid #333; /* Параметры рамки вокруг */
      /* Ширина колонки */
     padding: 5px; /* Поля вокруг текста */
     margin: 10px 10px 20px 5px; /* Значения отступов */
 	background: #5b5656;
+	width:200px;
    }
    #content { /* Правая колонка */
-
+position: fixed; 
+ width: 100%; 
+ height: 100%; 
+ top: 60px; 
+ left: 401px; 
+ overflow: auto;
     margin: 10px 5px 20px 25%; /* Значения отступов */
     padding: 5px; /* Поля вокруг текста */
     border: 1px solid #333; /* Параметры рамки */
-   
+   width:600px;
 	background: #5b5656;
+
    }
    #footer { /* Нижний блок */
 	width:100%;
